# fast-forward

./: .gitignore  404.html  =12.0.0  ADD_PROVIDER.md  BEFORE_RELEASE.md  Cargo.toml  DISABLED_FEATURES.md  FULL_LAZY.md  LICENSE  README.md  REMINDER.md  TEST_MIGRATION_GUIDE.md  TEST_UPDATE_SUMMARY.md  TODO.md  build.sh  diagnose_hawkeye_lazy.py  diagnose_rust_string.py  diagnose_tracab_cache.py  fastforward_wheel.ipynb  index.html  kloppy_light_wheel.ipynb  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test_filelike.py  test_filelike_data.py  test_hawkeye_debug.py  test_hawkeye_players.py  test_notebook_scenario.py  test_single_file_lazy.py  update_tests_script.py
.github/workflows/: fetch-wheels.yml
api/: index.html
assets/databallpy/: events.parquet
benchmarks/: index.html
concepts/coordinate-systems/: index.html
concepts/dataset/: index.html
concepts/filelike/: index.html
concepts/layouts/: index.html
concepts/orientations/: index.html
concepts/transformations/: index.html
docs/: benchmarks.md  getting-started.md  index.md  reporting-issues.md
docs/api/: index.md
docs/concepts/: coordinate-systems.md  dataset.md  filelike.md  layouts.md  orientations.md  transformations.md
docs/providers/: cdf.md  gradientsports.md  hawkeye.md  index.md  respovision.md  secondspectrum.md  signality.md  skillcorner.md  sportec.md  statsperform.md  tracab.md
docs/stylesheets/: extra.css
future_tests/: test_cdf_tracking.py
getting-started/: index.html
log/: benchmark_results3.csv
log/feat_cache/: 20260112_180158.txt  20260112_181635.txt  20260112_181651.txt  20260112_181707.txt  20260112_181719.txt  20260112_181841.txt  20260112_181856.txt  20260112_182026.txt  20260112_182335.txt  20260112_182430.txt  20260112_182513.txt  20260112_183813.txt  20260112_183833.txt  20260112_185153.txt  20260112_185438.txt
log/feat_full_lazy/: 20260112_110114.txt  20260112_110223.txt  20260112_110320.txt  20260112_110817.txt  20260112_120625.txt  20260112_120850.txt  20260112_121516.txt  20260112_121755.txt  20260112_125632.txt  20260112_130729.txt  20260112_131002.txt  20260112_132742.txt  20260112_134038.txt  20260112_134127.txt  20260112_135447.txt  20260112_135922.txt  20260112_140113.txt  dummy.txt
log/feat_new-provs/: 20260115_210047.txt  20260115_210104.txt  (+10 more)
management/: BEFORE_RELEASE.md  BUGS.md  FEATURE_REQ.md  ISSUES.md
providers/: index.html
reporting-issues/: index.html
search/: search_index.json
src/: coordinates.rs  error.rs  filter_pushdown.rs  lib.rs  orientation.rs  transforms.rs
tests/: config.py  test_cache.py  test_cdf.py  test_coordinates.py  test_dataset.py  test_errors.py  test_gradientsports.py  test_hawkeye.py  test_include_game_id.py  test_io.py  test_orientation.py  test_pyspark.py  test_respovision.py  test_secondspectrum.py  test_signality.py  test_skillcorner.py  test_sportec.py  test_statsperform.py  test_tracab.py  test_transforms.py
(+183 files in other folders)
