[package]
name = "kloppy_light"
version = "0.1.0"
edition = "2021"
description = "Fast SecondSpectrum tracking data loader using Rust"
license = "MIT"

[lib]
name = "kloppy_light"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
pyo3-polars = "0.19"
polars = { version = "0.45", features = ["lazy", "dtype-categorical", "dtype-duration"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"
quick-xml = { version = "0.31", features = ["serialize"] }

[profile.release]
lto = true
codegen-units = 1
